--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FlashcardsHackathon
 spring.datasource.url=jdbc:postgresql://localhost:5432/FlashDB
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=1234
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
